--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "proxy": "https://new1-production.up.railway.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
